[package]
name = "dawaclient"
version = "0.1.0"
authors = ["bogeholm <troelsmikkelsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "^0.2.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.50"
tokio = { version = "0.2", features = ["full"] }
